【修改】目录调整：将html和css分离，并将核心逻辑提取成单独的js文件

--- a/index.html
+++ b/index.html
@@ -8,355 +8,9 @@
   <script src="https://cdn.jsdelivr.net/npm/less@4.2.0/dist/less.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ace.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ext-language_tools.min.js"></script>
-  <style>
-    :root {
-      --bg-primary: #e9eaea;
-      --bg-secondary: #ffffff;
-      --bg-tertiary: #f8f9fa;
-      --text-primary: #212529;
-      --text-secondary: #6c757d;
-      --border-color: #dee2e6;
-      --shadow-color: rgba(0, 0, 0, 0.1);
-    }
-
-    [data-theme="dark"] {
-      --bg-primary: #343d3f;
-      --bg-secondary: #1e1e1e;
-      --bg-tertiary: #212529;
-      --text-primary: #e9ecef;
-      --text-secondary: #adb5bd;
-      --border-color: #444444;
-      --shadow-color: rgba(0, 0, 0, 0.3);
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-    }
-
-    body {
-      width: 100vw;
-      height: 100vh;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      color: var(--text-primary);
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      width: 100%;
-      height: 100%;
-      padding: 0.5rem;
-      background-color: var(--bg-primary);
-
-      .title {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 2rem;
-        padding: 0 1rem 0 1rem;
-
-        .theme-switcher {
-          display: flex;
-          gap: 0.25rem;
-
-          .theme-option {
-            cursor: pointer;
-          }
-        }
-      }
-
-      .content {
-        display: flex;
-        flex-direction: row;
-        gap: 0.5rem;
-        width: 100%;
-        height: 100%;
-
-        /* .content-code {
-          见下方
-        } */
-
-        .content-data {
-          flex: 4;
-          display: flex;
-          flex-direction: column;
-          gap: 0.5rem;
-
-          .content-input {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            background: var(--bg-secondary);
-            border-radius: 0.75rem;
-
-            .input-title {
-              padding: 0 1rem;
-              height: 2.25rem;
-              border-bottom: 1px solid var(--border-color);
-              display: flex;
-              align-items: center;
-              gap: 0.25rem;
-              font-size: 0.9rem;
-              font-weight: 500;
-            }
-
-            .input-form {
-              display: flex;
-              flex-direction: column;
-              /* flex: 1; */
-              gap: 0.5rem;
-              padding: 0.5rem;
-
-              .content-input-textarea {
-                background-color: var(--bg-tertiary);
-                width: 100%;
-                height: 9rem;
-                border-radius: 0.5rem;
-                border: 1px solid var(--border-color);
-                padding: 0.75rem;
-                resize: none;
-                font-family: inherit;
-                color: var(--text-primary);
-                outline: none;
-
-                &::-webkit-scrollbar {
-                  width: 0.5rem;
-                  height: 0.5rem;
-                }
-
-                &::-webkit-scrollbar-track {
-                  background-color: transparent;
-                }
-
-                &::-webkit-scrollbar-thumb {
-                  border-radius: 0.25rem;
-                }
-              }
-
-              .run-button {
-                width: 4.5rem;
-                height: 1.75rem;
-                border-radius: 0.4rem;
-                border: none;
-                background-color: #00b728;
-                color: white;
-                cursor: pointer;
-                display: flex;
-                gap: 0.25rem;
-                align-items: center;
-                justify-content: center;
-              }
-            }
-
-          }
-
-          .content-output {
-            flex: 3;
-            display: flex;
-            flex-direction: column;
-            background: var(--bg-secondary);
-            border-radius: 0.75rem;
-
-            .output-title {
-              padding: 0 1rem;
-              height: 2.25rem;
-              border-bottom: 1px solid var(--border-color);
-              display: flex;
-              align-items: center;
-              gap: 0.25rem;
-              font-size: 0.9rem;
-              font-weight: 500;
-            }
-            .output-content-container {
-              width: 100%;
-              height: 100%;
-              padding: 0.5rem;
-            }
-
-            .output-content {
-              width: 100%;
-              height: 100%;
-              padding: 0.75rem;
-              overflow-y: auto;
-              font-family: "Monaco", "Courier New", monospace;
-              font-size: 0.875rem;
-              line-height: 1.5;
-              white-space: pre-wrap;
-              word-break: break-all;
-              border: 1px solid var(--border-color);
-              border-radius: 0.5rem;
-              color: var(--text-primary);
-              background-color: var(--bg-tertiary);
-
-              &.empty {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                color: var(--text-secondary);
-              }
-
-              &::-webkit-scrollbar {
-                width: 0.5rem;
-                height: 0.5rem;
-              }
-
-              &::-webkit-scrollbar-track {
-                background-color: transparent;
-              }
-
-              &::-webkit-scrollbar-thumb {
-                border-radius: 0.25rem;
-              }
-            }
-          }
-        }
-      }
-    }
-
-
-    .content-code {
-      flex: 5;
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-      border-radius: 0.75rem;
-      background-color: var(--bg-secondary);
-
-      .code-title {
-        padding: 0 1rem;
-        height: 2.25rem;
-        border-bottom: 1px solid var(--border-color);
-        display: flex;
-        gap: 0.25rem;
-        align-items: center;
-        font-size: 0.9rem;
-        font-weight: 500;
-      }
-
-      .ace-editor-container {
-        flex: 1;
-        width: 100%;
-        border-radius: 0 0 0.75rem 0.75rem;
-      }
-
-      .ace_editor {
-        background-color: var(--bg-secondary) !important;
-        color: var(--text-primary) !important;
-        overflow: hidden;
-      }
-
-      .ace_gutter {
-        background-color: var(--bg-secondary) !important;
-        color: var(--text-secondary) !important;
-      }
-
-      .ace_gutter-cell {
-        color: var(--text-secondary) !important;
-      }
-
-      .ace_cursor {
-        color: var(--text-primary) !important;
-      }
-
-      .ace_selection {
-        background-color: rgba(0, 0, 0, 0.15) !important;
-      }
-
-      .ace_print-margin {
-        background-color: rgba(0, 0, 0, 0);
-      }
-
-      .ace_scrollbar {
-        width: 0.5rem;
-
-        &::-webkit-scrollbar {
-          width: 0.5rem;
-          height: 0.5rem;
-        }
-
-        &::-webkit-scrollbar-track {
-          background-color: transparent;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(0, 0, 0, 0.2);
-          border-radius: 0.25rem;
-
-          &:hover {
-            background-color: rgba(0, 0, 0, 0.3);
-          }
-        }
-      }
-    }
-
-    [data-theme="dark"] .content-code {
-      .ace_selection {
-        background-color: rgba(255, 255, 255, 0.15) !important;
-      }
-
-      .ace_scrollbar {
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(255, 255, 255, 0.2);
-
-          &:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-          }
-        }
-      }
-    }
-
-    [data-theme="light"] .content-input {
-      .content-input-textarea {
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(0, 0, 0, 0.2);
-
-          &:hover {
-            background-color: rgba(0, 0, 0, 0.3);
-          }
-        }
-      }
-    }
-
-    [data-theme="light"] .content-output {
-      .output-content {
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(0, 0, 0, 0.2);
-
-          &:hover {
-            background-color: rgba(0, 0, 0, 0.3);
-          }
-        }
-      }
-    }
-
-    [data-theme="dark"] .content-input {
-      .content-input-textarea {
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(255, 255, 255, 0.2);
-
-          &:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-          }
-        }
-      }
-    }
-
-    [data-theme="dark"] .content-output {
-      .output-content {
-        &::-webkit-scrollbar-thumb {
-          background-color: rgba(255, 255, 255, 0.2);
-
-          &:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-          }
-        }
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  <script src="aceEditor.js"></script>
+  <script src="codeRunner.js"></script>
 </head>
 
 <body>
@@ -365,9 +19,9 @@
     <div class="title">
       <div>LonAC Coding Editor</div>
       <div class="theme-switcher">
-        <div class="theme-option" data-theme="light" title="浅色主题">浅色</div>
-        <div class="theme-option" data-theme="dark" title="深色主题">深色</div>
-        <div class="theme-option" data-theme="auto" title="跟随系统">自动</div>
+        <div class="theme-option" data-theme="light" title="浅色主题"></div>
+        <div class="theme-option" data-theme="dark" title="深色主题"></div>
+        <div class="theme-option" data-theme="auto" title="跟随系统"></div>
       </div>
     </div>
 
@@ -499,146 +153,6 @@
   });
 </script>
 
-<script>
-  // Ace编辑器管理
-  class CodeEditor {
-    constructor() {
-      this.container = document.querySelector(".content-code");
-      this.editor = null;
-      this.init();
-      this.setupThemeSync();
-    }
 
-    init() {
-      const editorDiv = document.createElement("div");
-      editorDiv.className = "ace-editor-container";
-      this.container.appendChild(editorDiv);
-
-      this.editor = ace.edit(editorDiv);
-      ace.require("ace/ext/language_tools");
-
-      this.editor.setTheme("ace/theme/chrome");
-      this.editor.session.setMode("ace/mode/c_cpp");
-      this.editor.setOptions({
-        enableBasicAutocompletion: true,
-        enableLiveAutocompletion: true,
-        enableSnippets: true,
-        fontSize: 14,
-        fontFamily: "Monaco, Courier New, monospace",
-        showLineNumbers: true,
-        showGutter: true,
-      });
-
-      const initialCode = `#include <iostream>
-using namespace std;
-
-int main() {
-    cout << "Hello, World!" << endl;
-    return 0;
-}`;
-
-      this.editor.setValue(initialCode);
-      this.editor.clearSelection();
-    }
-
-    setupThemeSync() {
-      const observer = new MutationObserver(() => {
-        this.updateEditorTheme();
-      });
-
-      observer.observe(document.documentElement, {
-        attributes: true,
-        attributeFilter: ["data-theme"],
-      });
-    }
-
-    updateEditorTheme() {
-      if (!this.editor) return;
-
-      const isDark = document.documentElement.getAttribute("data-theme") === "dark";
-      const theme = isDark ? "ace/theme/tomorrow_night" : "ace/theme/chrome";
-      this.editor.setTheme(theme);
-    }
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    window.codeEditorInstance = new CodeEditor();
-  });
-</script>
-
-<script>
-  /**
-   * 代码运行管理（节流5秒）
-   */
-  class InputFormManager {
-    constructor() {
-      this.form = document.getElementById("inputForm");
-      this.outputContent = document.getElementById("outputContent");
-      this.lastSubmitTime = 0;
-      this.throttleDelay = 5000;
-      this.init();
-    }
-
-    init() {
-      this.form.addEventListener("submit", (e) => this.handleSubmit(e));
-    }
-
-    handleSubmit(e) {
-      e.preventDefault();
-
-      const now = Date.now();
-      if (now - this.lastSubmitTime < this.throttleDelay) {
-        return;
-      }
-
-      this.lastSubmitTime = now;
-      const inputData = new FormData(this.form).get("inputData");
-      const code = this.getEditorCode();
-      this.onSubmit(code, inputData);
-    }
-
-    getEditorCode() {
-      const codeEditor = window.codeEditorInstance;
-      if (codeEditor && codeEditor.editor) {
-        return codeEditor.editor.getValue();
-      }
-      return "";
-    }
-
-    setRunning() {
-      this.outputContent.textContent = "正在运行中...";
-      this.outputContent.classList.add("empty");
-    }
-
-    setOutput(text) {
-      this.outputContent.textContent = text;
-      this.outputContent.classList.remove("empty");
-    }
-
-    clearOutput() {
-      this.outputContent.textContent = "请运行代码";
-      this.outputContent.classList.add("empty");
-    }
-
-    /**
-     * 代码运行回调（待实现）
-     */
-    onSubmit(code, inputData) {
-      console.log("代码:", code);
-      console.log("输入数据:", inputData);
-
-      this.setRunning();
-
-      setTimeout(() => {
-        const testOutput = `测试文本\n测试文本:\nHello, Test!\n\n输入数据:\n${inputData || "(无)"}`;
-        this.setOutput(testOutput);
-      }, 1500);
-    }
-  }
-
-  document.addEventListener("DOMContentLoaded", () => {
-    new InputFormManager();
-  });
-</script>
 
 </html>
